feat: info > 新增 喚醒資料庫
